--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   pedometer: ^4.0.1
   provider: ^6.1.2
   sensors_plus: ^5.0.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
