--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,8 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.example.pedometer_app"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion "25.1.8937393"
+    //ndkVersion "25.1.8937393"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
