--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,15 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
-  daily_pedometer2: ^1.1.3
+  
   flutter:
     sdk: flutter
+  
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  google_fonts: ^4.0.3
   pedometer: ^4.0.1
-  provider: ^6.1.2
-  sensors_plus: ^5.0.1
+  percent_indicator: ^4.2.3
   shared_preferences: ^2.2.3
 
 dev_dependencies:
