--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.pedometer_app"
-    compileSdk = flutter.compileSdkVersion
+    compileSdkVersion 33
+    //compileSdk = flutter.compileSdkVersion
     ndkVersion "25.1.8937393"
     //ndkVersion "25.1.8937393"
 
