--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^4.0.3
   pedometer: ^4.0.1
   percent_indicator: ^4.2.3
+  permission_handler: ^11.3.1
   shared_preferences: ^2.2.3
 
 dev_dependencies:
