--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   pedometer: ^4.0.1
   percent_indicator: ^4.2.3
   permission_handler: ^11.3.1
+  restart_app: ^1.2.1
   shared_preferences: ^2.2.3
 
 dev_dependencies:
