--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   
+  flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: ^0.13.1
   get: ^4.6.6
   get_storage: ^2.1.1
   google_fonts: ^4.0.3
@@ -24,6 +26,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+flutter_launcher_icons: 
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/playstore.png"
+
+
+
   flutter_lints: ^3.0.0
 
 flutter:
